# HCDSA

./: .env.example  .gitignore  README.md  generated_questions.csv  pyproject.toml  requirements.txt
deep_research_agent/: README.md  __init__.py
deep_research_agent/agent/: deep_research_agent.py
deep_research_agent/config/: defaults.py
deep_research_agent/core/: mcp_client.py  rag.py  utils.py
deep_research_agent/runners/: main.py
deep_research_agent/scripts/: example.sh  para_test.sh
deep_research_agent/tests/: test_utils.py
inputs/: queries_1.txt
results copy/: Friday_20251127173733_inprocess_report_1.md  Friday_20251201184953_detailed_report.md  Friday_20251201184953_inprocess_report_1.md  Friday_20251201184953_inprocess_report_10.md  Friday_20251201184953_inprocess_report_11.md  Friday_20251201184953_inprocess_report_12.md  Friday_20251201184953_inprocess_report_13.md  Friday_20251201184953_inprocess_report_14.md  Friday_20251201184953_inprocess_report_15.md  Friday_20251201184953_inprocess_report_2.md  Friday_20251201184953_inprocess_report_3.md  Friday_20251201184953_inprocess_report_4.md  Friday_20251201184953_inprocess_report_5.md  Friday_20251201184953_inprocess_report_6.md  Friday_20251201184953_inprocess_report_7.md  Friday_20251201184953_inprocess_report_8.md  Friday_20251201184953_inprocess_report_9.md
scripts/: benchmark_parallel.py  benchmark_rag.py  example.sh  mult_query_benchmark_w_APIpool.py  multi_query_benchmark.py  para_test.sh  para_test_w_APIpool.sh  rag_test.sh  tavily_parallel_benchmark.py
(+10 files in other folders)
